test: prepare gradle build and libs for unit test